diesel_compile_tests/tests/fail/derive/unknown_attribute.stderr
error: unknown attribute, expected one of `aggregate`, `not_sized`, `foreign_derive`, `table_name`, `sql_type`, `treat_none_as_default_value`, `treat_none_as_null`, `belongs_to`, `mysql_type`, `sqlite_type`, `postgres_type`, `primary_key`, `check_for_backend`
 --> tests/fail/derive/unknown_attribute.rs:5:10
  |
5 | #[diesel(what = true)]
  |          ^^^^

error: unknown attribute, expected one of `embed`, `skip_insertion`, `column_name`, `sql_type`, `treat_none_as_default_value`, `treat_none_as_null`, `serialize_as`, `deserialize_as`, `select_expression`, `select_expression_type`
  --> tests/fail/derive/unknown_attribute.rs:12:14
   |
12 |     #[diesel(what = true)]
   |              ^^^^
